// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render with diffrent type 1`] = `
RenderContext {
  "0": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": Object {
          "radius": false,
          "size": "large",
        },
        "children": Array [
          "默认按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ghost": true,
          "size": "normal",
          "type": "primary",
        },
        "children": Array [
          "主要按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "radius": true,
          "size": "small",
          "type": "warning",
        },
        "children": Array [
          "警告按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "loading": true,
          "radius": Object {},
          "size": "tiny",
          "type": "cancel",
        },
        "children": Array [
          "取消按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "block": true,
          "radius": "16px",
        },
        "children": Array [
          "块状按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": "div",
  },
  "length": 1,
}
`;

exports[`<Button /> should render with gradient 1`] = `
RenderContext {
  "0": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": Object {
          "gradient": Object {
            "angle": 30,
            "from": "#FC5C7D",
            "shadow": "0 6px 8px -3px #d9669e",
            "to": "#6A82FB",
          },
        },
        "children": Array [
          "渐变按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "gradient": Object {},
        },
        "children": Array [
          "渐变按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": "div",
  },
  "length": 1,
}
`;

exports[`<Button /> should render with icon 1`] = `
RenderContext {
  "0": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": Object {
          "icon": Object {
            "positon": Object {
              "right": "21px",
            },
            "type": "search",
          },
        },
        "children": Array [
          "图标按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "icon": Object {
            "position": "right",
            "type": VNode {
              "attributes": undefined,
              "children": Array [
                "fd",
              ],
              "key": undefined,
              "nodeName": "div",
            },
          },
        },
        "children": Array [
          "图标位置",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "icon": Object {
            "position": Object {
              "left": "10px",
              "right": "20px",
            },
            "type": "arrow-right",
          },
          "style": Object {
            "justifyContent": "flex-start",
            "width": "120px",
          },
        },
        "children": Array [
          "图标位置",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "icon": Object {
            "position": "left",
            "type": "arrow-right",
          },
          "style": Object {
            "justifyContent": "flex-start",
            "width": "120px",
          },
        },
        "children": Array [
          "图标位置",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": "div",
  },
  "length": 1,
}
`;

exports[`<Button /> should render with loading 1`] = `
RenderContext {
  "0": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": Object {
          "loading": true,
        },
        "children": Array [
          "加载按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "loading": true,
          "loadingInfo": Object {
            "color": "#369",
            "size": "24px",
            "type": "ripple",
          },
          "type": "primary",
        },
        "children": Array [
          "加载按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "loading": true,
          "loadingInfo": Object {
            "size": "20px",
            "type": "step",
          },
          "type": "warning",
        },
        "children": Array [
          "加载按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ghost": true,
          "loading": true,
          "loadingInfo": Object {
            "size": "20px",
            "type": "step",
          },
          "type": "warning",
        },
        "children": Array [
          "加载按钮",
        ],
        "key": undefined,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": "div",
  },
  "length": 1,
}
`;
